knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contracting_Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Contracting_Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Corporate Entity on the Clinician’s Contract</inlineHelpText>
    <label>Contracting Corporate Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>equals</operation>
            <value>Corporate_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Contracting Corporate Entity)</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>