knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Contractual_Obligation__c.field-meta.xml
<CustomField>
    <fullName>Contractual_Obligation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractual Obligation</label>
    <type>Checkbox</type>
</CustomField>