knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corporate Entity</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Corporate Entities</relationshipLabel>
    <relationshipName>Corporate_Entity</relationshipName>
    <type>Lookup</type>
</CustomField>