knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Count_Of_Not_Deleted__c.field-meta.xml
<CustomField>
    <fullName>Count_Of_Not_Deleted__c</fullName>
    <label>Count Of Not Deleted?</label>
    <summaryFilterItems>
        <field>ProviderNetworkContract.Deleted__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>ProviderNetworkContract.ContractId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>