knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Coverage_Change_Flag__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Change_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Change Flag</label>
    <type>Checkbox</type>
</CustomField>