knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Coverage_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Reimbursement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coverage Reimbursement</label>
    <type>Checkbox</type>
</CustomField>