knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Coverage_Reimbursement_Details__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Reimbursement_Details__c</fullName>
    <label>Coverage Reimbursement Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>