knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Coverage_Reimbursement_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Reimbursement_Effective_Date__c</fullName>
    <label>Coverage Reimbursement Effective Date</label>
    <type>Date</type>
</CustomField>