knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Current_Fee_Schedule_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Fee_Schedule_Effective_Date__c</fullName>
    <label>Current Fee Schedule Effective Date</label>
    <type>Date</type>
</CustomField>