knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Customer_Signed_By_Unlisted__c.field-meta.xml
<CustomField>
    <fullName>Customer_Signed_By_Unlisted__c</fullName>
    <label>Customer Signed By Unlisted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>