knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Date_Distributed__c.field-meta.xml
<CustomField>
    <fullName>Date_Distributed__c</fullName>
    <label>Date Distributed</label>
    <type>Date</type>
</CustomField>