knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Date_Sent_For_Internal_Review__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_For_Internal_Review__c</fullName>
    <label>Date Sent For Internal Review</label>
    <type>Date</type>
</CustomField>