knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Date_to_Update_FS__c.field-meta.xml
<CustomField>
    <fullName>Date_to_Update_FS__c</fullName>
    <label>Date to Update FS</label>
    <type>Date</type>
</CustomField>