knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Description_of_Services__c.field-meta.xml
<CustomField>
    <fullName>Description_of_Services__c</fullName>
    <inlineHelpText>i.e. HM &amp; CC programs managed by SCP</inlineHelpText>
    <label>Description of Services</label>
    <length>255</length>
    <type>Text</type>
</CustomField>