knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Director_Staffing_Fufillment_Optimizatio__c.field-meta.xml
<CustomField>
    <fullName>Director_Staffing_Fufillment_Optimizatio__c</fullName>
    <label>Director Staffing Fufillment Optimizatio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>