knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Division_Operating_Officer__c.field-meta.xml
<CustomField>
    <fullName>Division_Operating_Officer__c</fullName>
    <label>Division Operating Officer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>