knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Draft_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Draft_Expiry_Date__c</fullName>
    <label>Draft Expiry Date</label>
    <type>Date</type>
</CustomField>