knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Early_Termination_Penalty__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Penalty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Early Termination Penalty</label>
    <type>Checkbox</type>
</CustomField>