knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Early_Termination_Penalty_Details__c.field-meta.xml
<CustomField>
    <fullName>Early_Termination_Penalty_Details__c</fullName>
    <label>Early Termination Penalty Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>