knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/EE_NP_PA_Hourly_Blended__c.field-meta.xml
<CustomField>
    <fullName>EE_NP_PA_Hourly_Blended__c</fullName>
    <label>EE NP/PA Hourly Blended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>