knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/EE_NPPA_Full_Time_Weekly_Blended__c.field-meta.xml
<CustomField>
    <fullName>EE_NPPA_Full_Time_Weekly_Blended__c</fullName>
    <label>EE NP/PA Full Time Weekly Blended</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>