knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/EKG_Interpretation_by_SCP__c.field-meta.xml
<CustomField>
    <fullName>EKG_Interpretation_by_SCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EKG Interpretation by SCP</label>
    <type>Checkbox</type>
</CustomField>