knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Employer_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Employer_Group_Name__c</fullName>
    <label>Employer Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>