knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Employer_s_Liability__c.field-meta.xml
<CustomField>
    <fullName>Employer_s_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employer&apos;s Liability</label>
    <type>Checkbox</type>
</CustomField>