knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/EMS_Medical_Director__c.field-meta.xml
<CustomField>
    <fullName>EMS_Medical_Director__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMS Medical Director</label>
    <type>Checkbox</type>
</CustomField>