knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Evaluate_Anticipated_Clinical_Warning__c.field-meta.xml
<CustomField>
    <fullName>Evaluate_Anticipated_Clinical_Warning__c</fullName>
    <formula>AND(
    NOT(ISBLANK(TEXT(NPPA_Tier__c))),
    NOT(ISBLANK(Anticipated_Clinical_Hours__c)),
    Anticipated_Clinical_Hours__c &gt; VALUE(TEXT(NPPA_Tier__c)) * VALUE($Label.NPPATierMultiplyingFactor)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Evaluate Anticipated Clinical Warning</label>
    <type>Checkbox</type>
</CustomField>