knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/EVP_SVP_VP_Operations__c.field-meta.xml
<CustomField>
    <fullName>EVP_SVP_VP_Operations__c</fullName>
    <label>EVP/SVP/VP Operations</label>
    <length>50</length>
    <type>Text</type>
</CustomField>