knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Excess_Patient__c.field-meta.xml
<CustomField>
    <fullName>Excess_Patient__c</fullName>
    <label>Excess $/Patient</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>