knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Exchange_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Reimbursement__c</fullName>
    <label>Exchange Reimbursement</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>