knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusivity</label>
    <type>Checkbox</type>
</CustomField>