knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Exclusivity_Details__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity_Details__c</fullName>
    <label>Exclusivity Details</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>