knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Executed_Copy_Mailed_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Copy_Mailed_Out_Date__c</fullName>
    <label>Executed Copy Mailed Out Date</label>
    <type>Date</type>
</CustomField>