knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Executed_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Executed_Received_Date__c</fullName>
    <label>Executed Received Date</label>
    <type>Date</type>
</CustomField>