knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Facility_Carrier_Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Carrier_Contract_Name__c</fullName>
    <label>Facility Carrier Contract Name</label>
    <type>AutoNumber</type>
</CustomField>