knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Facility_Carrier_Type__c.field-meta.xml
<CustomField>
    <fullName>Facility_Carrier_Type__c</fullName>
    <label>Facility Carrier Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACO</fullName>
            </value>
            <value>
                <fullName>After Hours Charge</fullName>
            </value>
            <value>
                <fullName>All COMM Products</fullName>
            </value>
            <value>
                <fullName>All Products</fullName>
            </value>
            <value>
                <fullName>ASO</fullName>
            </value>
            <value>
                <fullName>CIN-Clinically Integrated Network</fullName>
            </value>
            <value>
                <fullName>Clinical Integration</fullName>
            </value>
            <value>
                <fullName>CPT Suppression</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>EHP</fullName>
            </value>
            <value>
                <fullName>EKG Suppression</fullName>
            </value>
            <value>
                <fullName>EPO</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Flat Rate</fullName>
            </value>
            <value>
                <fullName>HMO</fullName>
            </value>
            <value>
                <fullName>Hospice</fullName>
            </value>
            <value>
                <fullName>Hospital Employee</fullName>
            </value>
            <value>
                <fullName>Hospital Employee Work Comp</fullName>
            </value>
            <value>
                <fullName>Hospital Specific Information</fullName>
            </value>
            <value>
                <fullName>Hospital System Affiliation</fullName>
            </value>
            <value>
                <fullName>Indemnity</fullName>
            </value>
            <value>
                <fullName>Indigent</fullName>
            </value>
            <value>
                <fullName>Inmate/Prison</fullName>
            </value>
            <value>
                <fullName>Ins Pmt &amp; Bill Co-ins Only</fullName>
            </value>
            <value>
                <fullName>Ins Pmt &amp; Bill Co-pay Only</fullName>
            </value>
            <value>
                <fullName>Ins Pmt &amp; Bill Ded Only</fullName>
            </value>
            <value>
                <fullName>Insurance Only</fullName>
            </value>
            <value>
                <fullName>LOA</fullName>
            </value>
            <value>
                <fullName>Medicaid</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>