knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Facility_Specialty_Requests__c.field-meta.xml
<CustomField>
    <fullName>Facility_Specialty_Requests__c</fullName>
    <label>Facility Specialty Requests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cardiac Surgery</fullName>
            </value>
            <value>
                <fullName>Cardiology - Interventional</fullName>
            </value>
            <value>
                <fullName>Cardiology-Invasive</fullName>
            </value>
            <value>
                <fullName>Cardiology - Non-Invasive</fullName>
            </value>
            <value>
                <fullName>Critical Care Medicine</fullName>
            </value>
            <value>
                <fullName>Emergency Medicine</fullName>
            </value>
            <value>
                <fullName>Family Practice</fullName>
            </value>
            <value>
                <fullName>Gastroenterology</fullName>
            </value>
            <value>
                <fullName>General Surgery</fullName>
            </value>
            <value>
                <fullName>Hemotology/Oncology</fullName>
            </value>
            <value>
                <fullName>Hospitalist</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Nephrology</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>OB/GYN</fullName>
            </value>
            <value>
                <fullName>Opthalmology</fullName>
            </value>
            <value>
                <fullName>Orthopedic Surgery</fullName>
            </value>
            <value>
                <fullName>Pathology</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
            <value>
                <fullName>Radiology</fullName>
            </value>
            <value>
                <fullName>Trauma Surgery</fullName>
            </value>
            <value>
                <fullName>Urology</fullName>
            </value>
            <value>
                <fullName>Occupational Medicine</fullName>
            </value>
            <value>
                <fullName>ATLS</fullName>
            </value>
            <value>
                <fullName>ACLS</fullName>
            </value>
            <value>
                <fullName>PALS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>