knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Financial_Impact__c.field-meta.xml
<CustomField>
    <fullName>Financial_Impact__c</fullName>
    <label>Impact of Contract</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>