knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Financial_Implications__c.field-meta.xml
<CustomField>
    <fullName>Financial_Implications__c</fullName>
    <label>Financial Implications</label>
    <length>1000</length>
    <type>Html</type>
</CustomField>