knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Financial_Model__c.field-meta.xml
<CustomField>
    <fullName>Financial_Model__c</fullName>
    <label>Financial Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee for Service</fullName>
            </value>
            <value>
                <fullName>Fixed Management Fee</fullName>
            </value>
            <value>
                <fullName>Flat Hourly</fullName>
            </value>
            <value>
                <fullName>Margin Guarantee</fullName>
            </value>
            <value>
                <fullName>Cost Plus %</fullName>
            </value>
            <value>
                <fullName>Cost Plus Management Fee</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Guaranteed Management Fee [Inactive]</fullName>
                <isActive>false</isActive>
                <label>Guaranteed Management Fee</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>