knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Financial_Terms__c.field-meta.xml
<CustomField>
    <fullName>Financial_Terms__c</fullName>
    <inlineHelpText>i.e. MG, subsidy, at risk money/incentive money, etc.</inlineHelpText>
    <label>Financial Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>