knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Force_Majure__c.field-meta.xml
<CustomField>
    <fullName>Force_Majure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Force Majure</label>
    <type>Checkbox</type>
</CustomField>