knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Form_on_File__c.field-meta.xml
<CustomField>
    <fullName>Form_on_File__c</fullName>
    <label>Form on File</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Copy Received</fullName>
            </value>
            <value>
                <fullName>Need Copy</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>