knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/General_Liability__c.field-meta.xml
<CustomField>
    <fullName>General_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Liability</label>
    <type>Checkbox</type>
</CustomField>