knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Global_Facility_Id__c.field-meta.xml
<CustomField>
    <fullName>Global_Facility_Id__c</fullName>
    <formula>Account.Global_Facility_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global Facility Id</label>
    <type>Text</type>
</CustomField>