knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/GME_Program__c.field-meta.xml
<CustomField>
    <fullName>GME_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GME Program</label>
    <type>Checkbox</type>
</CustomField>