knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Governance__c.field-meta.xml
<CustomField>
    <fullName>Governance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Governance</label>
    <type>Checkbox</type>
</CustomField>