knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>