knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/HL7_Feed__c.field-meta.xml
<CustomField>
    <fullName>HL7_Feed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HL7 Feed</label>
    <type>Checkbox</type>
</CustomField>