knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Hold_Date__c.field-meta.xml
<CustomField>
    <fullName>Hold_Date__c</fullName>
    <label>Hold Date</label>
    <type>Date</type>
</CustomField>