knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Hospital_Named_as_Additional_Insured__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Named_as_Additional_Insured__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Named as Additional Insured</label>
    <type>Checkbox</type>
</CustomField>