knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Hospitalist_Practice_Manager__c.field-meta.xml
<CustomField>
    <fullName>Hospitalist_Practice_Manager__c</fullName>
    <label>Hospitalist Practice Manager</label>
    <length>50</length>
    <type>Text</type>
</CustomField>