knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/If_Leased_Employee_Ins_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>If_Leased_Employee_Ins_Provided_By__c</fullName>
    <label>If Leased Employee Ins Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TSG</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Third Party Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>