knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Impact_to_Term__c.field-meta.xml
<CustomField>
    <fullName>Impact_to_Term__c</fullName>
    <label>Impact to Term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>