knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Implementation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Fee__c</fullName>
    <label>Implementation Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>