knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incentive</label>
    <type>Checkbox</type>
</CustomField>