knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contract/fields/Individual_Provider_Contract__c.field-meta.xml
<CustomField>
    <fullName>Individual_Provider_Contract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Provider Contract?</label>
    <type>Checkbox</type>
</CustomField>